# amplitude-migration

./: .gitignore  README.md  TIME-HANDLING.md  config.py  migrate.py  pyproject.toml
amplitude_migrator/: cli.py  core.py  time_utils.py
src/amplitude_migrator/: __init__.py  cli.py  core.py  runner.py
src/amplitude_migrator/web/: __init__.py  app.py
src/amplitude_migrator/web/static/: index.html  script.js  styles.css
web/backend/: report_api.py
web/frontend/src/pages/: MigrationDashboard.jsx
